--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
   height: 25px;
 }
 header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
   background-color: #ff6f00;
   color: white;
   padding: 30px;
@@ -33,24 +37,36 @@ header h1 a {
   color: white;
 }
 .banner {
-  background: url("./accessts/images/background.jpeg") no-repeat center/cover,
-    linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://via.placeholder.com/1200x400?text=Tablecloth+Background"); /* Placeholder; replace with actual URL */
+  background-color: rgba(0, 0, 0, 0.3);
   color: white;
   height: 300px;
   text-align: center;
   padding: 50px 20px;
   position: relative;
-  backdrop-filter: blur(20px);
+  overflow: hidden;
+  z-index: 1;
+}
+.banner::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("./accessts/images/background.jpeg") no-repeat center/cover;
+  filter: blur(3px);
 }
 .search-container {
   position: absolute;
-  top: 30%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 40%;
   max-width: 600px;
 }
+
 .search-input {
   width: 80%;
   padding: 10px;
@@ -58,6 +74,7 @@ header h1 a {
   border: none;
   font-size: 1em;
 }
+
 .search-button {
   background-color: #ff6f00;
   border: none;
@@ -66,18 +83,22 @@ header h1 a {
   cursor: pointer;
   margin-left: -40px;
 }
+
 .banner-text {
-  margin-top: 130px;
+  margin-top: 200px;
   color: white;
 }
+
 .categories-section,
 .meals-section {
   padding: 20px;
 }
+
 .banner-text2 {
   color: white;
   font-size: 35px;
 }
+
 h2 {
   color: black;
   padding-bottom: 10px;
